crates/swc_ecma_parser/tests/test262-error-references/fail/d087c23530163f2e.js.stderr
error: Expected ident
 --> $DIR/tests/test262-parser/fail/d087c23530163f2e.js:1:21
  |
1 | "use strict"; const const = 1;
  |                     ^^^^^

